gitops/components/kube-state-metrics/overlays/indigo/api.ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-state-metrics
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports: [{port: "6443", protocol: TCP}]
