gitops/components/kube-state-metrics/overlays/indigo/metrics.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-state-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-state-metrics
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: indigo-metrics
      ports: [{protocol: TCP, port: 8080}]
  egress: []
